syntax = "proto3";
package genesis;

option go_package = "github.com/pokt-network/pocket/shared/types/genesis";

message Validator {
  bytes address = 1; // DISCUSS: should we make this a string?
  bytes public_key = 2;
  bool paused = 3;
  int32 status = 4; // DISCUSS: Should we make this an enum?
  string service_url = 5;
  string staked_tokens = 6;
  uint32 missed_blocks = 7;
  int64 paused_height = 8;
  int64 unstaking_height = 9; // DISCUSS: Should we make this an unsigned int?
  bytes output = 10;
}